cabal-version:       3.0

name:                dep-t-dynamic
version:             0.5.0.0
synopsis:            A dynamic environment for dependency injection.
description:         A dynamic environment for dependency injection.
                     
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
category:            Control
extra-source-files:  CHANGELOG.md, README.md

source-repository    head
  type:     git
  location: https://github.com/danidiaz/dep-t-dynamic.git

common common
  build-depends:       base >=4.10.0.0 && < 5,
                       transformers ^>= 0.5.0.0,
                       mtl ^>= 2.2,
                       unliftio-core ^>= 0.2.0.0,
                       dep-t ^>= 0.5.0.0,
                       containers >= 0.6,
                       unordered-containers >= 0.2.14,
                       hashable >=1.0.1.1 && <1.50
  default-language:    Haskell2010

library
  import: common
  exposed-modules:     Dep.Dynamic
  hs-source-dirs:      lib 

test-suite tests
  import: common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       
    dep-t, 
    dep-t-dynamic, 
    template-haskell,
    tasty              >= 1.3.1,
    tasty-hunit        >= 0.10.0.2,
    aeson              ^>= 2.0,
    bytestring,
    text,
    containers


-- VERY IMPORTANT for doctests to work: https://stackoverflow.com/a/58027909/1364288
-- http://hackage.haskell.org/package/cabal-doctest
test-suite doctests
  import:              common
  ghc-options:         -threaded
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctests.hs
  build-depends:       
                       dep-t, 
                       dep-t-dynamic,
                       doctest            ^>= 0.18,

